--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,11 +12,20 @@
   </div>
 </div>
 
-<%= form_for(Message.new) do |f| %>
-  名前:
-  <%= f.text_field :name %>
 
-  内容:
-  <%= f.text_field :body %>
+<%= form_for(Message.new, html: {class:"form-horizontal"}) do |f| %>
+  <div class="form-group">
+    <label for="exampleInputName2" class="col-sm-2 control-label">名前：</label>
+    <div class="col-sm-10">
+    <%= f.text_field :name, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="exampleInputName2" class="col-sm-2 control-label">内容：</label>
+    <div class="col-sm-10">
+      <%= f.text_area :body, class: "form-control" %>
+    </div>
+    </div>
   <%= f.submit class: "btn btn-sm btn-primary" %>
+  
 <% end %>
