--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -15,13 +15,13 @@
 
 <%= form_for(Message.new, html: {class:"form-horizontal"}) do |f| %>
   <div class="form-group">
-    <label for="exampleInputName2" class="col-sm-2 control-label">名前：</label>
+    <label for="message_name" class="col-sm-2 control-label">名前：</label>
     <div class="col-sm-10">
     <%= f.text_field :name, class: "form-control" %>
     </div>
   </div>
   <div class="form-group">
-    <label for="exampleInputName2" class="col-sm-2 control-label">内容：</label>
+    <label for="message_body" class="col-sm-2 control-label">内容：</label>
     <div class="col-sm-10">
       <%= f.text_area :body, class: "form-control" %>
     </div>
